<resources>
    <string name="app_name">C3Lesson6Hw6</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="now_playing">Now Playing</string>
    <string name="talk_me_down">Talk Me Down</string>
    <string name="blue_neighbourhood">Blue Neighbourhood</string>
    <string name="number">number</string>
    <string name="singer_name">Singer Name</string>
    <string name="song_title">Song Title</string>
    <string name="_0_00">0:00</string>
    <string name="details">Details</string>
</resources>