<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:gravity="start"
    android:paddingStart="16dp"
    android:paddingEnd="24dp"
    android:paddingVertical="16dp">

    <TextView
        android:layout_gravity="center"
        android:id="@+id/tv_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="1" />

    <LinearLayout
        android:layout_weight="1.5"
        android:layout_marginStart="24dp"
        android:id="@+id/detail_container"
        android:layout_marginHorizontal="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="vertical">

        <TextView
            android:layout_marginBottom="8dp"
            android:id="@+id/tv_song_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/song_title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tv_singer_name"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/singer_name" />

    </LinearLayout>

    <TextView
        android:layout_marginHorizontal="16dp"
        android:layout_gravity="center"
        android:text="@string/_0_00"
        android:id="@+id/tv_length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"/>
</LinearLayout>



